# pulse-monitor

./: .gitignore  GEMINI.md  README.md  dummy.c  package-lock.json  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
